fix scrollbars

--- a/landing.css
+++ b/landing.css
@@ -1,6 +1,6 @@
 body {
   animation: fadeIn 2s ease-out forwards;
-  overflow: scroll;
+  overflow: auto;
 }
 
 header {
